[gd_scene load_steps=4 format=2]

[ext_resource path="res://Astar/objects/Enemy.gd" type="Script" id=1]
[ext_resource path="res://images/red_human.png" type="Texture" id=2]
[ext_resource path="res://images/floor.png" type="Texture" id=3]

[node name="Enemy" type="Sprite" groups=[
"dinamic",
"enemy",
]]
z_index = 4
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="locked1" type="Sprite" parent="."]
visible = false
modulate = Color( 0.180392, 0.996078, 0.0117647, 0.576471 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )

[node name="locked2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.180392, 0.996078, 0.0117647, 0.576471 )
z_index = 1
z_as_relative = false
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
